# alexandra_ai_eval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docs.yaml
config/: config.yaml
config/process/: process1.yaml
site/: about.html  index.html  listings.json  search.json
site/boards/: named_entity_recognition.html  sentiment_classification.html
site/data/: named_entity_recognition.json
src/aiai_eval/: __init__.py  automatic_speech_recognition.py  cli.py  co2.py  config.py  enums.py  evaluator.py  exceptions.py  gui.py  hf_hub.py  hf_hub_utils.py  image_to_text.py  leaderboard_utils.py  local_hf_utils.py  local_model_utils.py  local_pytorch_utils.py  metric_configs.py  model_adjustment.py  model_loading.py  named_entity_recognition.py  question_answering.py  scoring.py  sequence_classification.py  spacy_utils.py  task.py  task_configs.py  task_factory.py  text_classification.py  utils.py
src/alexandra_ai_eval/: __init__.py  automatic_speech_recognition.py  cli.py  co2.py  config.py  country_codes.py  enums.py  evaluator.py  exceptions.py  gui.py  hf_hub_utils.py  leaderboard_utils.py  local_hf_utils.py  local_pytorch_utils.py  metric_configs.py  model_adjustment.py  model_loading.py  named_entity_recognition.py  question_answering.py  scoring.py  sequence_classification.py  spacy_utils.py  task.py  task_configs.py  task_factory.py  utils.py
src/leaderboard/: README.md  _quarto.yml  index.qmd
src/leaderboard/8c16d7f9/: .nojekyll  404.html  about.html  index.html  listings.json  search.json  sitemap.xml
src/leaderboard/8c16d7f9/587a5243/boards/: named_entity_recognition.html
src/leaderboard/8c16d7f9/site_libs/bootstrap/: bootstrap-dark.min.css
src/leaderboard/942578a6/: .nojekyll  robots.txt  sitemap.xml
src/leaderboard/942578a6/587a5243/: AlexandraAI-eval.html  about.html  index.html
src/leaderboard/942578a6/587a5243/boards/: sentiment_classification.html
src/leaderboard/942578a6/boards/: named_entity_recognition.html  sentiment_classification.html
src/leaderboard/942578a6/data/: sentiment_classification.json
src/leaderboard/942578a6/site_libs/bootstrap/: bootstrap.min.css
src/leaderboard/boards/: named_entity_recognition.qmd  sentiment_classification.qmd
src/rest_api/: index.py
src/scripts/: add_models_to_leaderboard.py  fix_dot_env_file.py  versioning.py
tests/: __init__.py  conftest.py  test_cli.py  test_co2.py  test_config.py  test_country_codes.py  test_enums.py  test_evaluator.py  test_exceptions.py  test_gui.py  test_hf_hub.py  test_hf_hub_utils.py  test_image_to_text.py  test_leaderboard_utils.py  test_local_hf_utils.py  test_local_pytorch_utils.py  test_metric_configs.py  test_model_adjustment.py  test_model_loading.py  test_named_entity_recognition.py  test_question_answering.py  test_scoring.py  test_sequence_classification.py  test_spacy_utils.py  test_task.py  test_task_configs.py  test_task_factory.py  test_text_classification.py  test_utils.py
