[tool.poetry]
name = "alexandra_ai_eval"
version = "0.1.0"
description = "Evaluation of finetuned models."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
spacy = "^3.4.1"
sentencepiece = ">=0.1.96,<1.0.0"
protobuf = ">=3.0.0,<3.21.0"
tqdm = "^4.64.0"
seqeval = "^1.2.2"
huggingface-hub = ">=0.8.1,<1.0.0"
datasets = "^2.12.0"
codecarbon = "^2.1.3"
psutil = ">=5.9.0,<5.9.2"
fsspec = "^2022.7.1"
termcolor = "^1.1.0"
colorama = ">=0.4.5,<1.0.0"
jiwer = "^2.5.1"
transformers = "^4.23.0"
soundfile = ">=0.12.1,<1.0.0"
evaluate = ">=0.3.0,<1.0.0"
pyctcdecode = ">=0.4.0,<1.0.0"
librosa = ">=0.9.2,<0.10.0"
torch = "^1.13.1"
tabulate = ">=0.9.0,<1.0.0"
requests = "^2.31.0"
starlette = ">=0.27.0,<1.0.0"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip"}
gradio = "^3.41.0"
fastapi = ">=0.101.1,<1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
pdoc = "^7.1.1"
black = "^22.6.0"
isort = "^5.10.1"
readme-coverage-badger = ">=0.1.2,<1.0.0"

[tool.poetry.scripts]
evaluate = "alexandra_ai_eval.cli:evaluate"
evaluate-gui = "alexandra_ai_eval.gui:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/alexandra_ai_eval',
    '-n 8',
]
xfail_strict = true
filterwarnings = ["ignore"]
log_cli_level = "info"
testpaths = ["tests", "src/alexandra_ai_eval"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
