[tool.poetry]
name = "alexandra_ai_eval"
version = "0.1.0"
description = "Evaluation of finetuned models."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
spacy = "^3.4.1"
sentencepiece = ">=0.1.96,<1.0.0"
protobuf = ">=3.0.0,<3.21.0"
tqdm = "^4.64.0"
seqeval = "^1.2.2"
huggingface-hub = ">=0.8.1,<1.0.0"
datasets = "^2.12.0"
codecarbon = "^2.1.3"
psutil = ">=5.9.0,<5.9.2"
fsspec = "^2023.9.2"
termcolor = "^2.3.0"
jiwer = "^3.0.3"
transformers = "^4.34.0"
soundfile = ">=0.12.1,<1.0.0"
evaluate = ">=0.4.0,<1.0.0"
pyctcdecode = ">=0.5.0,<1.0.0"
librosa = ">=0.9.2,<0.10.0"
torch = "2.0.0"
tabulate = ">=0.9.0,<1.0.0"
requests = "^2.31.0"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip"}
gradio = "^3.41.0"
fastapi = ">=0.103.2,<1.0.0"
colorama = ">=0.4.6,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
readme-coverage-badger = ">=0.1.2,<1.0.0"
pytest = "^7.4.2"
pdoc = "^14.1.0"

[tool.poetry.scripts]
evaluate = "alexandra_ai_eval.cli:evaluate"
evaluate-gui = "alexandra_ai_eval.gui:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/alexandra_ai_eval',
    '-n 8',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = ["tests", "src/alexandra_ai_eval"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.ruff]
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
